--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ a:hover{
 .title {
     font-size: 70px;
     color: white;
-    padding: 25% 0 2%;
+    padding: 20% 0 2%;
     opacity: 1;
 }
 
@@ -222,6 +222,7 @@ a:hover{
 .explore-btn {
     display: flex;
     width: 135px;
+    height: 50px;
     background-color: #ffe900;
     border-radius: 40px;
     padding: 5px;
@@ -248,6 +249,7 @@ button:focus {
 .explore-btn-icon {
     color: black;
     padding: 17px 23px;
+
     margin-right: 3px;
     background-color: white;
     border-radius: 50%;
