--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
 body {
     margin: 0;
 }
-a{
+
+a {
     text-decoration: none;
 }
-a:hover{
+
+a:hover {
     text-decoration: none;
 }
+
 .wrapper {
     width: 100%;
     height: 100vh;
@@ -43,12 +46,14 @@ a:hover{
     width: 50%;
     z-index: 91;
 }
-.header-logo a{
+
+.header-logo a {
     font-family: 'Spartan', sans-serif;
     color: #ffe900;
     font-size: 40px;
     text-align: left;
 }
+
 .header-logo span {
     color: white;
 }
@@ -124,21 +129,32 @@ a:hover{
 .title {
     font-size: 70px;
     color: white;
-    padding: 20% 0 2%;
+    /*padding: 20% 0 2%;*/
     opacity: 1;
 }
 
 .content {
-    /*border: 1px solid white;*/
     width: 22%;
     text-align: left;
     margin-left: 15%;
     z-index: 1000;
     position: absolute;
-    top: 30vh;
+    bottom: 20vh;
 }
+@media only screen and (min-width: 991px) and (max-width: 1200px){
+    .content {
+        width: 25%;
+    }
+    .main-img {
+        width: 55%;
+        height: 80vh;
+    }
+}
+@media only screen and (min-width: 720px) and (max-width: 991px){
+    .content {
 
-
+    }
+}
 .content-card {
     display: none;
     width: 22%;
@@ -226,7 +242,6 @@ a:hover{
     background-color: #ffe900;
     border-radius: 40px;
     padding: 5px;
-    /*padding: 7px 5px 7px 5px;*/
 }
 
 .description {
