--- a/style.css
+++ b/style.css
@@ -136,18 +136,19 @@ a:hover {
 .content {
     width: 22%;
     text-align: left;
-    margin-left: 22vh;
+    margin-left: 20vh;
     z-index: 1000;
-    position: absolute;
-    bottom: 0;
+    margin-top: 20vh;
+    /*position: absolute;*/
+    /*bottom: 0;*/
 }
 @media only screen and (min-width: 991px) and (max-width: 1200px){
     .content {
         width: 25%;
-        margin-left: 12vh;
+        margin-left: 14vh;
     }
     .content-card{
-        margin-left: 12vh;
+        margin-left: 14vh;
     }
     .main-img {
         width: 50%;
@@ -165,11 +166,11 @@ a:hover {
 .content-card {
     display: none;
     width: 22%;
-    margin-left: 22vh;
+    margin-left: 20vh;
     z-index: 1000;
-    position: absolute;
-    /*top: 30vh;*/
-    bottom: 0;
+    margin-top: 20vh;
+    /*position: absolute;*/
+    /*bottom: 0;*/
 }
 
 .card-name {
@@ -239,8 +240,10 @@ a:hover {
 }
 
 .single-img-next {
+    width: 50%;
+    height: 80%;
     margin-right: -45vh;
-    margin-bottom: -40vh;
+    margin-bottom: -20vh;
 
 }
 
