--- a/style.css
+++ b/style.css
@@ -1,289 +1,273 @@
 body {
-    margin: 0;
+  margin: 0;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 a:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .wrapper {
-    width: 100%;
-    height: 100vh;
-    background-color: #161010;
-    overflow: hidden;
-    position: relative;
+  width: 100%;
+  height: 100vh;
+  background-color: #161010;
+  overflow: hidden;
+  position: relative;
 }
 
 .container {
-    position: absolute;
-    z-index: 90;
-    top: 0;
-    right: 0;
-    left: 0;
-    width: 84%;
-    height: 84vh;
-    border: 1.5vh solid #223744;
-    border-radius: 10px;
-    padding-left: 20vh;
-    margin: 6vh auto;
-    /*z-index: 200000;*/
+  position: absolute;
+  z-index: 90;
+  top: 0;
+  right: 0;
+  left: 0;
+  width: 84%;
+  height: 84vh;
+  border: 1.5vh solid #223744;
+  border-radius: 10px;
+  padding-left: 20vh;
+  margin: 6vh auto;
 }
 
 .header {
-    display: flex;
-    justify-content: space-between;
-    padding: 5vh 3vh 0 0;
-    /*background-image: url("img/nav_element.png");*/
-    background-repeat: no-repeat;
-    background-position: right;
-    /*margin-left: 25vh;*/
-    margin-bottom: 6vh;
+  display: flex;
+  justify-content: space-between;
+  padding: 5vh 3vh 0 0;
+  background-repeat: no-repeat;
+  background-position: right;
+  margin-bottom: 6vh;
 }
 
 .header-logo {
-    width: 50%;
-    z-index: 91;
+  width: 50%;
+  z-index: 91;
 }
 
 .header-logo a {
-    font-family: 'Spartan', sans-serif;
-    color: #ffe900;
-    font-size: 40px;
-    text-align: left;
+  font-family: "Spartan", sans-serif;
+  color: #ffe900;
+  font-size: 40px;
+  text-align: left;
 }
 
 .header-logo span {
-    color: white;
+  color: white;
 }
 
 .nav {
-    display: flex;
-    justify-content: center;
-    width: 50%;
+  display: flex;
+  justify-content: center;
+  width: 50%;
 }
 
 .nav-link {
-    font-family: 'Spartan', sans-serif;
-    color: white;
-    padding: 0 20px;
-    position: relative;
-    z-index: 91;
+  font-family: "Spartan", sans-serif;
+  color: white;
+  padding: 0 20px;
+  position: relative;
+  z-index: 91;
 }
-
 
 .circle-wrapper {
-    width: 100%;
-    height: 100vh;
-    position: relative;
-    z-index: 1;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  z-index: 1;
 }
-.top-img{
-    position: absolute;
-    right: 0;
+.top-img {
+  position: absolute;
+  right: 0;
 }
 .circle-homepage {
-    background-color: #94ceed;
-    border-radius: 50%;
-    position: absolute;
-    padding: 31vh;
-    top: -40vh;
-    left: -40vh;
+  background-color: #94ceed;
+  border-radius: 50%;
+  position: absolute;
+  padding: 31vh;
+  top: -40vh;
+  left: -40vh;
 }
 
 .circle-position-with-card {
-    background-color: #94ceed;
-    border-radius: 50%;
-    position: absolute;
-    padding: 31vh;
-    bottom: -144vh;
-    right: -40vh;
-    opacity: 0;
+  background-color: #94ceed;
+  border-radius: 50%;
+  position: absolute;
+  padding: 31vh;
+  bottom: -144vh;
+  right: -40vh;
+  opacity: 0;
 }
 
-
 .circle-hidden {
-    display: none;
+  display: none;
 }
 
 .block-visible {
-    display: block;
+  display: block;
 }
 
-
 .main-img-wrapper {
-    /*display: block;*/
-    bottom: 0;
-    right: 0;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    position: absolute;
+  /*display: block;*/
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  position: absolute;
 }
 
 .main-img {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 40%;
-    height: 73vh;
-    z-index: 1000;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 40%;
+  height: 73vh;
+  z-index: 1000;
 }
 
 .title {
-    font-size: 65px;
-    color: white;
-    /*padding: 20% 0 2%;*/
-    opacity: 1;
+  font-size: 65px;
+  color: white;
+  opacity: 1;
 }
 
 .content {
-    width: 28%;
-    text-align: left;
-    /*margin-left: 20vh;*/
-    z-index: 1000;
+  width: 28%;
+  text-align: left;
+  z-index: 1000;
 }
-@media only screen and (min-width: 991px) and (max-width: 1200px){
-
-   .container{
-       padding-left: 15vh;
-   }
-    .content {
-        width: 25%;
-        /*margin-left: 14vh;*/
-    }
-    .main-img {
-        width: 50%;
-        height: 70vh;
-    }
-
+@media only screen and (min-width: 991px) and (max-width: 1200px) {
+  .container {
+    padding-left: 15vh;
+  }
+  .content {
+    width: 25%;
+  }
+  .main-img {
+    width: 50%;
+    height: 70vh;
+  }
 }
-@media only screen and (min-width: 720px) and (max-width: 991px){
-    .content {
-        width: 30%;
-    }
+@media only screen and (min-width: 720px) and (max-width: 991px) {
+  .content {
+    width: 30%;
+  }
 }
 .content-card {
-    display: none;
-    width: 30%;
-    z-index: 1000;
+  display: none;
+  width: 30%;
+  z-index: 1000;
 }
 
 .card-name {
-    font-family: 'Spartan', sans-serif;
-    font-size: 65px;
-    color: black;
-    padding: 7% 0 2%;
-    font-weight: 500;
+  font-family: "Spartan", sans-serif;
+  font-size: 65px;
+  color: black;
+  padding: 7% 0 2%;
+  font-weight: 500;
 }
 
 .card-description {
-    font-family: 'Spartan', sans-serif;
-    padding: 5% 0;
-    color: black;
-    font-size: 16px;
-    line-height: 1.3;
+  font-family: "Spartan", sans-serif;
+  padding: 5% 0;
+  color: black;
+  font-size: 16px;
+  line-height: 1.3;
 }
 
 .card-number {
-    background-color: white;
-    box-sizing: border-box;
-    border-radius: 50%;
-    width: 75px;
-    height: 75px;
-    padding: 27px 20px;
-    margin-bottom: 5vh;
+  background-color: white;
+  box-sizing: border-box;
+  border-radius: 50%;
+  width: 75px;
+  height: 75px;
+  padding: 27px 20px;
+  margin-bottom: 5vh;
 }
 
 .card-number p {
-    text-align: center;
-    font-family: 'Spartan', sans-serif;
-    font-size: 25px;
-
+  text-align: center;
+  font-family: "Spartan", sans-serif;
+  font-size: 25px;
 }
 
 .single-img-wrapper {
-    display: none;
-    align-items: center;
-    flex-direction: column;
-    justify-content: flex-end;
-    flex-wrap: wrap;
-    bottom: 0;
-    right: 0;
-    width: 60%;
-    height: 90vh;
-    z-index: 1000;
-    overflow: hidden;
-    position: absolute;
+  display: none;
+  align-items: center;
+  flex-direction: column;
+  justify-content: flex-end;
+  flex-wrap: wrap;
+  bottom: 0;
+  right: 0;
+  width: 60%;
+  height: 90vh;
+  z-index: 1000;
+  overflow: hidden;
+  position: absolute;
 }
 
 .single-img {
-    width: 50%;
-    height: 80%;
-    margin-left: 10%;
-    z-index: 1000;
+  width: 50%;
+  height: 80%;
+  margin-left: 10%;
+  z-index: 1000;
 }
 
 .single-img-wrapper button {
-    position: absolute;
-    right: 10vh;
-    bottom: 10vh;
-    background-color: white;
-    height: 70px;
-    padding: 25px 32px;
-    border-radius: 35px;
-    z-index: 1000;
+  position: absolute;
+  right: 10vh;
+  bottom: 10vh;
+  background-color: white;
+  height: 70px;
+  padding: 25px 32px;
+  border-radius: 35px;
+  z-index: 1000;
 }
 
 .single-img-next {
-    width: 50%;
-    height: 80%;
-    margin-right: -45vh;
-    margin-bottom: -20vh;
-
+  width: 50%;
+  height: 80%;
+  margin-right: -45vh;
+  margin-bottom: -20vh;
 }
 
 .explore-btn {
-    display: flex;
-    width: 135px;
-    height: 50px;
-    background-color: #ffe900;
-    border-radius: 40px;
-    padding: 5px;
-    margin-bottom: 5vh;
+  display: flex;
+  width: 135px;
+  height: 50px;
+  background-color: #ffe900;
+  border-radius: 40px;
+  padding: 5px;
+  margin-bottom: 5vh;
 }
 
 .description {
-    padding: 5% 0;
-    color: white;
-    font-size: 16px;
-    line-height: 1.3;
+  padding: 5% 0;
+  color: white;
+  font-size: 16px;
+  line-height: 1.3;
 }
 
 button {
-    background-color: transparent;
-    border-color: transparent;
-
+  background-color: transparent;
+  border-color: transparent;
 }
 
 button:focus {
-    outline: none;
+  outline: none;
 }
 
 .explore-btn-icon {
-    color: black;
-    padding: 17px 23px;
-
-    margin-right: 3px;
-    background-color: white;
-    border-radius: 50%;
-    /*box-sizing: border-box;*/
-    font-size: 14px;
+  color: black;
+  padding: 17px 23px;
+  margin-right: 3px;
+  background-color: white;
+  border-radius: 50%;
+  font-size: 14px;
 }
 
 .explore-btn-icon i {
-    font-size: 16px;
+  font-size: 16px;
 }
